first without delete and create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.hiddenmethod.filter.enabled=true
 
+spring.mvc.static-path-pattern=/static/**
+spring.jackson.serialization.fail-on-empty-beans=false
+
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
